<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:contentDescription="@string/web_page_logo_content_description"
            android:id="@+id/logo"
            android:layout_width="350dp"
            android:layout_height="147dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/height_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/height_input_hint"
                    android:inputType="numberDecimal"
                    android:textSize="25sp"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/weight_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/weight_input_hint"
                    android:inputType="numberDecimal"
                    android:textSize="24sp"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/imc_button"
                android:layout_width="250dp"
                android:layout_height="70dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/accentColor"
                android:text="@string/imc_button"
                android:textColor="#FFFFFF"
                android:textSize="24sp"/>

            <ImageView
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/primaryColor"
                android:src="@drawable/ic_cancel_white_48dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/IMC_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/primaryColor"
            android:textSize="32sp"/>

        <TextView
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/primaryColor"
            android:textSize="32sp"/>
    </LinearLayout>



</ScrollView>